[tool.poetry]
name = "nvd"
version = "0.2.0"
description = "A simple API client for the NIST National Vulnerability Database (NVD)"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
cvss = "^2.6"
inflection = "^0.5.1"
cpe = {git = "https://github.com/whitfieldsdad/cpe.git"}
polars = "^0.20.6"
pandas = "^2.2.0"
pyarrow = "^15.0.0"

[tool.poetry.scripts]
nvd = "nvd.cli:main"
tool = "nvd.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
